updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a dental hygienist learning software development.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p> . .  
+      <p>Seattle, Washington</p> . .  
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I like hiking, roller blading, volleyball, badminton, board games and much more.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is endless. I would like to invent all kinds of things and design all kinds of structures. But for now I'm content to learn to code and hopefully develop a fun language learning application.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I still live in the Seattle area.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I have a few main reasons to be a web developer. First, my neck hurts from dental hygiene and I don't want to end up with neck surgery. Second, I have a website idea that I want to create. Third, I would like to find a job as a software developer in this growing tech industry.</p>
     </section>
 
     <footer id="footer">
