removed .. from detail section Where I'm From

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h1>Introduction</h1>
       <p>I'm a dental hygienist learning software development.</p>
       <h1>Where I'm From</h1>
-      <p>Seattle, Washington</p> . .  
+      <p>Seattle, Washington</p>   
       <h1>What are your favorite hobbies?</h1>
       <p>I like hiking, roller blading, volleyball, badminton, board games and much more.</p>
       <h1>What's your dream job?</h1>
