--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1>What are your favorite hobbies?</h1>
       <p>I like hiking, roller blading, volleyball, badminton, board games and much more.</p>
       <h1>What's your dream job?</h1>
-      <p>My dream job is endless. I would like to invent all kinds of things and design all kinds of structures. But for now I'm content to learn to code and hopefully develop a fun language learning application.</p>
+      <p>My dream job is endless. I would like to invent all kinds of things, design all kinds of structures, and farm all kinds of fruits and vegetables. But for now I'm content to learn to code and hopefully develop a fun language learning application.</p>
       <h1>Where do you live?</h1>
       <p>I still live in the Seattle area.</p>
       <h1>Why do you want to be a web developer?</h1>
